--- a/index.html
+++ b/index.html
@@ -12,5 +12,86 @@
 
 <body>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+<div class="page">
+  <header>
+    <nav>
+      <a class="item" href="services.html">Services</a>
+      <a class="item" href="services.html">Product</a>
+      <a class="item" href="services.html">Vision</a>
+      <a class="item" href="services.html">Features</a>
+      <a class="item" href="services.html">About</a>
+      <a class="item" href="services.html">Contact</a>
+      <a class="item" href="services.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+    </nav>
+  </header>
+
+  <section>
+    <div class="container">
+      <div class="box1">
+        <h1>Innovation<br>On<br>Demand</h1>
+        <button>Get Started</button>
+      </div>
+      <div class="box1">
+        <img src="img/header-img.png" alt="Image of a code snippet.">
+      </div>
+    </div> 
+
+    <hr> 
+
+    <div>
+      <div class="container">
+        <div class="box1">
+          <h3>Features</h3>
+
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+
+        <div class="box1">
+          <h3>About</h3>
+
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="full-length">
+      <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+    </div>
+
+    <div>
+      <div class="container">
+        <div class="box2">
+          <h3>Services</h3>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+            
+        <div class="box2">
+          <h3>Product</h3>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+          
+        <div class="box2">
+            <h3>Vision</h3>
+            <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+          </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="contact">
+      <h3>Contact</h3>
+      <p>123 Way 456 Street<br>Somewhere, USA</p>
+      <br>
+      <p>1 (888) 888-8888</p>
+      <br>
+      <p>sales@greatidea.io</p>
+    </div>
+  </section>
+
+  <footer>
+    <p>Copyright Great Idea! 2018</p>
+  </footer>
+</div> <!-- div container -->  
 </body>
 </html>
