--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Great Idea - Responsive I</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
@@ -29,10 +30,11 @@
     <div class="container">
       <div class="box1">
         <h1>Innovation<br>On<br>Demand</h1>
+        <br>
         <button>Get Started</button>
       </div>
       <div class="box1">
-        <img src="img/header-img.png" alt="Image of a code snippet.">
+        <img class="image_1" src="img/header-img.png" alt="Image of a code snippet.">
       </div>
     </div> 
 
@@ -40,13 +42,13 @@
 
     <div>
       <div class="container">
-        <div class="box1">
+        <div class="box2">
           <h3>Features</h3>
 
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
         </div>
 
-        <div class="box1">
+        <div class="box2">
           <h3>About</h3>
 
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
@@ -60,17 +62,17 @@
 
     <div>
       <div class="container">
-        <div class="box2">
+        <div class="box3">
           <h3>Services</h3>
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
         </div>
             
-        <div class="box2">
+        <div class="box3">
           <h3>Product</h3>
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
         </div>
           
-        <div class="box2">
+        <div class="box3">
             <h3>Vision</h3>
             <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
           </div>
