--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <div class="page">
   <header>
     <nav>
-      <a class="item" href="services.html">Services</a>
-      <a class="item" href="services.html">Product</a>
-      <a class="item" href="services.html">Vision</a>
-      <a class="item" href="services.html">Features</a>
-      <a class="item" href="services.html">About</a>
-      <a class="item" href="services.html">Contact</a>
+      <a class="item" href="#">Services</a>
+      <a class="item" href="#">Product</a>
+      <a class="item" href="#">Vision</a>
+      <a class="item" href="#">Features</a>
+      <a class="item" href="#">About</a>
+      <a class="item" href="#">Contact</a>
       <a class="item" href="services.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
     </nav>
   </header>
