--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <div class="page">
   <header>
     <nav>
-      <a class="item" href="services.html">Services</a>
-      <a class="item" href="#">Product</a>
-      <a class="item" href="#">Vision</a>
-      <a class="item" href="#">Features</a>
-      <a class="item" href="#">About</a>
-      <a class="item" href="#">Contact</a>
-      <a class="item" href="#"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+      <a href="services.html">Services</a>
+      <a href="#">Product</a>
+      <a href="#">Vision</a>
+      <a href="#">Features</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+      <a href="#"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
     </nav>
   </header>
 
